<resources>
    <string name="app_name">AgriMate</string>
    <string name="simple_text">I am</string>
    <string name="simple_button">INVESTOR</string>
    <string name="simple_button2">FARMER</string>
    <string name="simple_button3">LOGIN</string>
    <string name="simple_text2">Sign Up</string>
    <string name="simple_text3">Name</string>
    <string name="simple_text4">Phone number</string>
    <string name="simple_button4">SEND OTP</string>
    <string name="simple_button5">LOGIN</string>
    <string name="simple_button6">SIGN UP</string>
    <string name="simple_button7">Sign Up</string>
    <string name="simple_button8">LOGIN</string>
    <string name="simple_text5">I am</string>
    <string name="simple_button9">CORPORATE</string>
    <string name="simple_button10">INDIVIDUAL</string>
    <string name="simple_text6">Enter OTP</string>
    <string name="simple_button11">Login</string>
    <string name="simple_button12">Sign Up</string>
    <string name="simple_button13">SEND OTP</string>
    <string name="simple_text7">Phone number</string>
    <string name="simple_text8">KCCID</string>
    <string name="simple_text9">Phone number</string>
    <string name="simple_text10">Aadhar Number</string>
    <string name="simple_text11">KCC ID</string>
    <string name="simple_text12">Expiry Date</string>
    <string name="simple_text13">Change Phone Number</string>
    <string name="simple_button15">Upload Land Documents</string>
    <string name="simple_button14">UPDATE</string>
    <string name="simple_text14">Cityname</string>
    <string name="simple_button16">Treding</string>
    <string name="simple_button17">New Stocks</string>
    <string name="simple_button18">High Rated</string>
    <string name="simple_text15">Farmers Name</string>
    <string name="simple_text16">Location</string>
    <string name="simple_text17">Details</string>
    <string name="simple_text18">Buy</string>
    <string name="simple_text19">Per Stock Value</string>
    <string name="simple_text20">Stocks remaining</string>
    <string name="simple_text21">Agrimate User</string>
    <string name="simple_button19">Pay</string>
    <string name="simple_text22">Insure my investment</string>
    <string name="simple_text23">Expected return</string>
    <string name="simple_text24">Final Price</string>
    <string name="simple_text25">No.of.Stocks</string>
    <string name="simple_text26">Type of issues</string>
    <string name="simple_text27">Type your report here!</string>
    <string name="simple_button20">Report</string>
    <string name="simple_text28">Farmer Name</string>
    <string name="simple_text29">Soil Type</string>
    <string name="simple_text30">Land Area</string>
    <string name="simple_text31">Crop Type</string>
    <string name="simple_text32">Per Stock Value</string>
    <string name="simple_text33">Expected Return</string>
    <string name="simple_text34">Name</string>
    <string name="simple_text35">DOB</string>
    <string name="simple_text36">Aadhar Number</string>
    <string name="simple_text37">Pan Card</string>
    <string name="simple_text38">Profit Earned = $800 </string>
    <string name="simple_button21">My Stocks</string>
    <string name="simple_button22">Stock History</string>
    <string name="simple_text39">Farmers name</string>
    <string name="simple_text40">Location</string>
    <string name="simple_text41">Per Stock Value</string>
    <string name="simple_text42">Stocks Invested</string>
    <string name="simple_text43">Earned</string>
    <string name="simple_text44">From</string>
    <string name="simple_text45">To</string>
    <string name="simple_text46">Farmers Name</string>
    <string name="simple_button23">Buy More</string>
    <string name="simple_button_24">Report</string>
    <string name="simple_text47">Farmers Name</string>
    <string name="simple_text48">X2 Times</string>
    <string name="simple_button24">Profile</string>
    <string name="simple_button25">Investors</string>
    <string name="simple_button26">My Stocks</string>
    <string name="simple_button27">Stock History</string>
    <string name="simple_button28">Update Verification</string>
    <string name="simple_button29">Help and Support</string>
    <string name="simple_button30">About Us</string>
    <string name="simple_text49">Test User</string>
    <string name="simple_text50">KCC ID: 123456</string>
    <string name="simple_text51">Aadhar ID: 1234 5678 9012 3456</string>
    <string name="simple_button31">Call us</string>
    <string name="simple_text52">Sorry! No Stocks Available yet!</string>
    <string name="simple_text53">Name</string>
    <string name="simple_text54">Phone Number</string>
    <string name="simple_text55">Aadhar number</string>
    <string name="simple_text56">Land Description</string>
    <string name="simple_text57">Land Available in Acres</string>
    <string name="simple_text58">Amount required in Rs.</string>
    <string name="simple_text59">What Plant do you want to plant</string>
    <string name="simple_text60">Brief Description</string>
    <string name="simple_button32">Finish</string>
</resources>
