<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.2"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="124dp"
            android:paddingTop="40dp"
            android:layout_weight="0.5"
            android:background="@drawable/main" />

        <Button
            android:id="@+id/profilebtn"
            android:layout_width="match_parent"
            android:layout_height="103dp"
            android:fontFamily="@font/quicksand"
            android:layout_weight="1.0"
            android:background="@drawable/prof"
            android:gravity="center|bottom"
            android:text="@string/simple_button24"
            android:textColor="#000000"
            android:textSize="15dp"
            android:textStyle="bold" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"

        android:orientation="horizontal" >

        <Button
            android:id="@+id/buttonreq"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:gravity="center|bottom"
            android:background="@drawable/reqsto"
            android:text="@string/simple_button25"
            android:textSize="20dp"
            android:fontFamily="@font/quicksand"
            android:textColor="#000000"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:fontFamily="@font/quicksand"
            android:layout_height="match_parent"
            android:gravity="center|bottom"
            android:background="@drawable/mysto"
            android:layout_weight="1.0"
            android:text="@string/simple_button26"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="#000000"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/quicksand"
            android:layout_weight="1.0"
            android:textStyle="bold"
            android:background="@drawable/stohis"
            android:textSize="20dp"
            android:textColor="#000000"
            android:text="@string/simple_button27"
            android:gravity="center|bottom"/>

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="20dp"
            android:background="@drawable/upve"
            android:textStyle="bold"
            android:fontFamily="@font/quicksand"
            android:textColor="#000000"
            android:layout_weight="1.0"
            android:text="@string/simple_button28"
            android:gravity="center|bottom"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1.1"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/contact"
            android:layout_weight="1.0"
            android:textStyle="bold"
            android:fontFamily="@font/quicksand"
            android:text="@string/simple_button29"
            android:textSize="20dp"
            android:textColor="#000000"
            android:gravity="center|bottom"/>

        <Button
            android:id="@+id/button8"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:textSize="20dp"
            android:textStyle="bold"
            android:fontFamily="@font/quicksand"
            android:background="@drawable/helpas"
            android:textColor="#000000"
            android:text="@string/simple_button30"
            android:gravity="center|bottom"/>

    </LinearLayout>
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:background="#ffffff"/>
</LinearLayout>