<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="178dp"
        android:layout_height="49dp"
        android:background="@drawable/ectangle2"
        android:gravity="center"
        android:text="@string/simple_text40"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20dp"
        android:fontFamily="@font/light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.931"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="192dp"
        android:layout_height="54dp"
        android:background="@drawable/ectangle2"
        android:gravity="center"
        android:text="@string/simple_text41"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20dp"
        android:fontFamily="@font/light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.366" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="165dp"
        android:layout_height="51dp"
        android:background="@drawable/ectangle2"
        android:gravity="center"
        android:text="@string/simple_text42"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20dp"
        android:fontFamily="@font/light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.069"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="163dp"
        android:layout_height="52dp"
        android:background="@drawable/ectangle2"
        android:gravity="center"
        android:text="@string/simple_text43"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="22dp"
        android:fontFamily="@font/light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.879"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192" />

    <TextView
        android:id="@+id/textView27"
        android:layout_width="168dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/ectangle2"
        android:gravity="center"
        android:text="@string/simple_text44"
        android:textAlignment="center"
        android:textColor="#000"
        android:fontFamily="@font/light"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="158dp"
        android:layout_height="44dp"
        android:background="@drawable/ectangle2"
        android:gravity="center"
        android:text="@string/simple_text45"
        android:fontFamily="@font/light"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.881"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.283" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="168dp"
        android:layout_height="50dp"
        android:background="@drawable/ectangle2"
        android:gravity="center"
        android:text="@string/simple_text46"
        android:textAlignment="center"
        android:textColor="#000"
        android:textSize="20dp"
        android:fontFamily="@font/light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.108" />

    <Button
        android:id="@+id/button15"
        android:layout_width="176dp"
        android:layout_height="50dp"
        android:background="@drawable/ath1"
        android:gravity="center"
        android:text="@string/simple_button23"
        android:textAlignment="center"
        android:textSize="20dp"
        android:fontFamily="@font/quicksand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.025"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.458" />

    <Button
        android:id="@+id/button16"
        android:layout_width="182dp"
        android:layout_height="49dp"
        android:background="@drawable/ath1"
        android:text="@string/simple_button_24"
        android:textSize="20dp"
        android:fontFamily="@font/quicksand"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.951"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.458" />
</androidx.constraintlayout.widget.ConstraintLayout>