<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InvProfile"
    android:background="@drawable/back1">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="105dp"
        android:layout_height="105dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061"
        app:srcCompat="@drawable/prof" />

        <EditText
            android:id="@+id/editText25"
            android:layout_width="211dp"
            android:layout_height="42dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ectangle2"
            android:ems="10"
            android:hint="@string/simple_text34"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColorHint="#000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.249" />

        <EditText
            android:id="@+id/editText26"
            android:layout_width="209dp"
            android:layout_height="41dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ectangle2"
            android:ems="10"
            android:hint="@string/simple_text35"
            android:inputType="textPersonName"
            android:textAlignment="center"

            android:textColorHint="#000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.475"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.343" />

        <EditText
            android:id="@+id/editText27"
            android:layout_width="215dp"
            android:layout_height="44dp"
            android:background="@drawable/ectangle2"
            android:ems="10"
            android:hint="@string/simple_text36"
            android:inputType="phone"
            android:textAlignment="center"
            android:textColorHint="#000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.459"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.438"
            android:layout_gravity="center_horizontal" />

        <EditText
            android:id="@+id/editText28"
            android:layout_width="209dp"
            android:layout_height="43dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ectangle2"
            android:ems="10"
            android:hint="@string/simple_text37"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColorHint="#000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.48"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.543" />

    <Button
        android:id="@+id/button11"
        android:layout_width="152dp"
        android:layout_height="64dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:background="@drawable/ath1"
        android:text="@string/simple_button21"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button12"
        app:layout_constraintHorizontal_bias="0.298"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.914"
        tools:ignore="UnknownId" />

    <Button
            android:id="@+id/StockHis"
            android:layout_width="156dp"
            android:layout_height="60dp"
            android:background="@drawable/ath1"
            android:text="@string/simple_button22"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.937"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.909" />

        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/simple_text38"

            android:textColor="#000"
            android:textSize="25dp"
            android:gravity="center"
            android:background="@drawable/ectangle2"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7"
            android:layout_gravity="center_horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>